# BVH-Tree

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
examples/: aabbtree_closest_point.py  aabbtree_display.py  box_sphere_intersection.py  box_triangle_intersection.py  debug.py  interactive_closest_point.py  interactive_tree_display.py  lattice_morton_encoding.py  mesh_distance_field.py  mesh_morton_encoding.py  point_box_distance.py  point_line_distance.py  point_mesh_distance.py  point_mesh_distance_1.py  point_mesh_distance_2.py  widget_example.py
experimental/: lattice_morton_encoding.py  mesh_morton_encoding.py  morton_codes.py  widget_example.py
src/: bindings.cpp
src/aabbtree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aabbtree/mesh/: class_mesh.py  distance.py  utils.py
src/aabbtree/tree/: class_aabbdisplay.py  class_aabbnode.py  class_aabbtree.py
src/bvh/: __init__.py  __init__.pyi
src/bvh/mesh/: __init__.py  class_mesh.py  examples.py
src/bvh/tree/: class_display.py  class_tree.py  utils.py
src/bvhtree/: __init__.py
src/bvhtree/mesh/: __init__.py  class_mesh.py  distance.py  examples.py  intersection.py  utils.py
src/bvhtree/tree/: __init__.py  class_aabb.py  class_aabbtree.py  class_display.py  class_node.py  class_tree.py  utils.py
src/core/include/: geometry.h  mesh.h  query.h  tree.h  types.h
src/core/src/: geometry.cpp  mesh.cpp  tree.cpp
