[project]
name = "aabbtree"
version = "0.9.0"
authors = [{name="Marko Leskovar", email="markoleskovar30@gmail.com"}]
description = "Axis-Aligned Bounding Box Tree for 3D surface meshes written in Python"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aabb tree", "bvh tree", "mesh processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]
requires-python = ">=3.11"
dependencies = [
    'numba ~= 0.60.0',
    'numpy ~= 2.0.2',
    'scipy ~= 1.14.1',
    'matplotlib ~= 3.9.0',
    'pyvista ~= 0.44.1',
    'pymeshfix ~= 0.17.0',
    'icosphere ~= 0.1.3',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

