[project]
name = "bvhtree"
version = "0.9.0"
authors = [{name="Marko Leskovar", email="markoleskovar30@gmail.com"},]
description = "Bounding Volume Hierarchy Tree for 3D surface meshes written in Python and C++"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bvh tree", "aabb tree", "mesh processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    'numba ~= 0.60.0',
    'numpy ~= 2.0.2',
    'scipy ~= 1.14.1',
    'matplotlib ~= 3.9.0',
    'pyvista ~= 0.44.1',
    'pymeshfix ~= 0.17.0',
    'icosphere ~= 0.1.3',
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
